Добавил фильтрациюю по дипазону годов постройки
